// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/inventory/purchases > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "include": {
        "movimiento_inventario": {
          "select": {
            "id_movimiento": true,
          },
        },
        "pago_proveedor": {
          "select": {
            "id_pago_proveedor": true,
          },
        },
        "proveedor": true,
      },
      "orderBy": [
        {
          "fecha_registro": "desc",
        },
        {
          "id_compra": "desc",
        },
      ],
      "skip": 0,
      "take": 20,
      "where": {},
    },
    "prisma": "compra.findMany",
  },
  {
    "args": {
      "where": {},
    },
    "prisma": "compra.count",
  },
  {
    "args": {
      "orderBy": {
        "razon_social": "asc",
      },
      "select": {
        "id_proveedor": true,
        "razon_social": true,
      },
    },
    "prisma": "proveedor.findMany",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/inventory/purchases > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Compras</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Compras</h1>
<p>Consulta compras registradas, pagos y entradas generadas.</p>
</div>
</div>
<div>
<a data-variant="default" href="/dashboard/inventory/purchases/new">Nueva compra</a>
</div>
</div>
</section>
<form action="/dashboard/inventory/purchases">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar compra..." name="q" value=""/>
</div>
<div>
<label for="supplier">Proveedor</label>
<select id="supplier" name="supplier">
<option value="" selected="">Todos los proveedores</option>
<option value="id_proveedor-1">razon_social-1</option>
<option value="id_proveedor-2">razon_social-2</option>
</select>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="" selected="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="status">Estado compra</label>
<select id="status" name="status">
<option value="" selected="">Estado compra</option>
<option value="registrada">Registrada</option>
<option value="confirmada">Confirmada</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<label for="payment">Estado pago</label>
<select id="payment" name="payment">
<option value="" selected="">Estado pago</option>
<option value="pendiente">Pendiente</option>
<option value="parcial">Parcial</option>
<option value="pagado">Pagado</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value=""/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value=""/>
</div>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/purchases">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Proveedor</th>
<th>Comprobante</th>
<th>Total</th>
<th>Pago</th>
<th>Estado compra</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_compra-1</td>
<td>1/7/2026</td>
<td>razon_social-1</td>
<td>tipo_comprobante-1 numero_comprobante-1</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
<td>
<span data-variant="secondary">estado_compra-1</span>
</td>
<td>
<div>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-1?returnTo=%2Fdashboard%2Finventory%2Fpurchases">Ver detalle</a>
</div>
</td>
</tr>
<tr>
<td>id_compra-2</td>
<td>2/7/2026</td>
<td>razon_social-2</td>
<td>-</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
<td>
<span data-variant="secondary">estado_compra-2</span>
</td>
<td>
<div>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-2?returnTo=%2Fdashboard%2Finventory%2Fpurchases">Ver detalle</a>
</div>
</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 1-20 de 42 compras · Página 1 de 3</p>
<div>
<button data-variant="outline" disabled="">Anterior</button>
<a data-variant="outline" href="/dashboard/inventory/purchases?page=2">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/purchases > todos los filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "include": {
        "movimiento_inventario": {
          "select": {
            "id_movimiento": true,
          },
        },
        "pago_proveedor": {
          "select": {
            "id_pago_proveedor": true,
          },
        },
        "proveedor": true,
      },
      "orderBy": [
        {
          "fecha_registro": "desc",
        },
        {
          "id_compra": "desc",
        },
      ],
      "skip": 20,
      "take": 20,
      "where": {
        "AND": [
          {
            "OR": [
              {
                "id_compra": {
                  "contains": "F001",
                  "mode": "insensitive",
                },
              },
              {
                "numero_comprobante": {
                  "contains": "F001",
                  "mode": "insensitive",
                },
              },
              {
                "proveedor": {
                  "razon_social": {
                    "contains": "F001",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_proveedor": "PRV00000001",
          },
          {
            "detalle_compra": {
              "some": {
                "id_material": "MAT00000001",
              },
            },
          },
          {
            "estado_compra": "confirmada",
          },
          {
            "estado_pago": "pendiente",
          },
          {
            "fecha_compra": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "compra.findMany",
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "OR": [
              {
                "id_compra": {
                  "contains": "F001",
                  "mode": "insensitive",
                },
              },
              {
                "numero_comprobante": {
                  "contains": "F001",
                  "mode": "insensitive",
                },
              },
              {
                "proveedor": {
                  "razon_social": {
                    "contains": "F001",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_proveedor": "PRV00000001",
          },
          {
            "detalle_compra": {
              "some": {
                "id_material": "MAT00000001",
              },
            },
          },
          {
            "estado_compra": "confirmada",
          },
          {
            "estado_pago": "pendiente",
          },
          {
            "fecha_compra": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "compra.count",
  },
  {
    "args": {
      "orderBy": {
        "razon_social": "asc",
      },
      "select": {
        "id_proveedor": true,
        "razon_social": true,
      },
    },
    "prisma": "proveedor.findMany",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/inventory/purchases > todos los filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Compras</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Compras</h1>
<p>Consulta compras registradas, pagos y entradas generadas.</p>
</div>
</div>
<div>
<a data-variant="default" href="/dashboard/inventory/purchases/new">Nueva compra</a>
</div>
</div>
</section>
<form action="/dashboard/inventory/purchases">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar compra..." name="q" value="F001"/>
</div>
<div>
<label for="supplier">Proveedor</label>
<select id="supplier" name="supplier">
<option value="">Todos los proveedores</option>
<option value="id_proveedor-1">razon_social-1</option>
<option value="id_proveedor-2">razon_social-2</option>
</select>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="status">Estado compra</label>
<select id="status" name="status">
<option value="">Estado compra</option>
<option value="registrada">Registrada</option>
<option value="confirmada" selected="">Confirmada</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<label for="payment">Estado pago</label>
<select id="payment" name="payment">
<option value="">Estado pago</option>
<option value="pendiente" selected="">Pendiente</option>
<option value="parcial">Parcial</option>
<option value="pagado">Pagado</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value="2026-07-01"/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value="2026-07-31"/>
</div>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/purchases">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Proveedor</th>
<th>Comprobante</th>
<th>Total</th>
<th>Pago</th>
<th>Estado compra</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_compra-1</td>
<td>1/7/2026</td>
<td>razon_social-1</td>
<td>tipo_comprobante-1 numero_comprobante-1</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
<td>
<span data-variant="secondary">estado_compra-1</span>
</td>
<td>
<div>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-1?returnTo=%2Fdashboard%2Finventory%2Fpurchases%3Fq%3DF001%26supplier%3DPRV00000001%26material%3DMAT00000001%26status%3Dconfirmada%26payment%3Dpendiente%26from%3D2026-07-01%26to%3D2026-07-31%26page%3D2">Ver detalle</a>
</div>
</td>
</tr>
<tr>
<td>id_compra-2</td>
<td>2/7/2026</td>
<td>razon_social-2</td>
<td>-</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
<td>
<span data-variant="secondary">estado_compra-2</span>
</td>
<td>
<div>
<a data-variant="outline" href="/dashboard/inventory/purchases/id_compra-2?returnTo=%2Fdashboard%2Finventory%2Fpurchases%3Fq%3DF001%26supplier%3DPRV00000001%26material%3DMAT00000001%26status%3Dconfirmada%26payment%3Dpendiente%26from%3D2026-07-01%26to%3D2026-07-31%26page%3D2">Ver detalle</a>
</div>
</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 21-40 de 42 compras · Página 2 de 3</p>
<div>
<a data-variant="outline" href="/dashboard/inventory/purchases?q=F001&amp;supplier=PRV00000001&amp;material=MAT00000001&amp;status=confirmada&amp;payment=pendiente&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=1">Anterior</a>
<a data-variant="outline" href="/dashboard/inventory/purchases?q=F001&amp;supplier=PRV00000001&amp;material=MAT00000001&amp;status=confirmada&amp;payment=pendiente&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=3">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/purchases/[id] > detalle con regreso al listado > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {
        "id_compra": "COM00000001",
      },
    },
    "prisma": "compra.findUnique",
  },
  {
    "args": {
      "where": {
        "id_proveedor": "id_proveedor-1",
      },
    },
    "prisma": "proveedor.findUnique",
  },
  {
    "args": {
      "orderBy": {
        "id_detalle_compra": "asc",
      },
      "where": {
        "id_compra": "id_compra-1",
      },
    },
    "prisma": "detalle_compra.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_pago": "desc",
      },
      "where": {
        "id_compra": "id_compra-1",
      },
    },
    "prisma": "pago_proveedor.findMany",
  },
  {
    "args": {
      "where": {
        "id_material": {
          "in": [
            "id_material-1",
            "id_material-2",
          ],
        },
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/inventory/purchases/[id] > detalle con regreso al listado > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/purchases?payment=pendiente">Compras</a>
</li>
<li>
<svg/>
<span aria-current="page">id_compra-1</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Detalle de compra</h1>
<p>Consulta los materiales adquiridos, montos, comprobante y estado de pago.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a compras">
<svg/>Volver a compras</button>
</div>
</div>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Proveedor</div>
</div>
</div>
<div>
<p>razon_social-1</p>
<p>Proveedor de la compra.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Total compra</div>
</div>
</div>
<div>
<p>S/ 11.50</p>
<p>Monto total registrado.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pagado</div>
</div>
</div>
<div>
<p>S/ 34.00</p>
<p>Suma de pagos registrados.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Saldo pendiente</div>
</div>
</div>
<div>
<p>S/ -22.50</p>
<p>Monto restante por pagar.</p>
</div>
</div>
</section>
<div>
<div>
<div>Datos de la compra</div>
</div>
<div>
<div>
<p>
<span>Fecha:</span> 1/7/2026</p>
<p>
<span>Comprobante:</span> tipo_comprobante-1 numero_comprobante-1</p>
<p>
<span>Estado de pago:</span> <span data-variant="secondary">estado_pago-1</span>
</p>
<p>
<span>Subtotal:</span> S/ 11.50</p>
<p>
<span>IGV:</span> S/ 11.50</p>
<p>
<span>Estado compra:</span> <span data-variant="secondary">estado_compra-1</span>
</p>
</div>
<p>
<span>Observaciones:</span> observaciones-1</p>
</div>
</div>
<div>
<div>
<div>Materiales comprados</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Material</th>
<th>Cantidad</th>
<th>Unidad</th>
<th>Costo unitario</th>
<th>Subtotal</th>
</tr>
</thead>
<tbody>
<tr>
<td>nombre_material-1</td>
<td>11.50</td>
<td>unidad_medida-1</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
</tr>
<tr>
<td>nombre_material-2</td>
<td>22.50</td>
<td>unidad_medida-2</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
<div>
<div>
<div>Historial de pagos</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Fecha</th>
<th>Monto</th>
<th>Método</th>
<th>Saldo posterior</th>
<th>Estado</th>
</tr>
</thead>
<tbody>
<tr>
<td>1/7/2026</td>
<td>S/ 11.50</td>
<td>metodo_pago-1</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
</tr>
<tr>
<td>2/7/2026</td>
<td>S/ 22.50</td>
<td>metodo_pago-2</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/purchases/[id] > inexistente redirige al listado > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {
        "id_compra": "COM99999999",
      },
    },
    "prisma": "compra.findUnique",
  },
]
`;

exports[`/dashboard/inventory/purchases/[id] > inexistente redirige al listado > resultado 1`] = `
{
  "html": null,
  "outcome": "redirect:/dashboard/inventory/purchases",
}
`;

exports[`/dashboard/inventory/purchases/new > formulario > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "orderBy": {
        "razon_social": "asc",
      },
      "select": {
        "id_proveedor": true,
        "razon_social": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "proveedor.findMany",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "costo_unitario_actual": true,
        "id_material": true,
        "nombre_material": true,
        "unidad_medida": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/inventory/purchases/new > formulario > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/purchases">Compras</a>
</li>
<li>
<svg/>
<span aria-current="page">Nueva compra</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Nueva compra</h1>
<p>Registra una compra de materiales y genera automáticamente la entrada de inventario.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a compras">
<svg/>Volver a compras</button>
</div>
</div>
</section>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<section>
<div>
<div>
<label for="id_proveedor-_R_m_">Proveedor *</label>
<input type="hidden" name="id_proveedor" value=""/>
<div>
<input id="id_proveedor-_R_m_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_proveedor-_R_m_-listbox" aria-expanded="false" required="" placeholder="Buscar proveedor..." value=""/>
</div>
</div>
</div>
<div>
<div>
<label>Fecha de compra *</label>
<input type="date" required="" name="fecha_compra"/>
</div>
<div>
<label>Tipo comprobante</label>
<select name="tipo_comprobante">
<option value="">Sin comprobante</option>
<option value="boleta">Boleta</option>
<option value="factura">Factura</option>
<option value="recibo">Recibo</option>
<option value="otro">Otro</option>
</select>
</div>
<div>
<label>Nro. comprobante</label>
<input placeholder="Ej. F001-000123" name="numero_comprobante"/>
</div>
</div>
<div>
<div>
<label for="aplica_igv">IGV</label>
<div>
<button type="button" role="switch" aria-checked="false" data-state="unchecked" value="on" id="aplica_igv" aria-label="Aplicar IGV de 18% sobre el total de la compra">
<span data-state="unchecked">
</span>
</button>
<input type="checkbox" aria-hidden="true" tabindex="-1" name="aplica_igv" value="on"/>
<span>Sin IGV</span>
</div>
<p>Se activa automáticamente al elegir factura. Puedes cambiarlo en cualquier momento.</p>
</div>
<div>
<label>Observaciones</label>
<input placeholder="Observaciones generales de la compra" name="observaciones"/>
</div>
</div>
</section>
<section>
<div>
<div>
<h2>Materiales comprados</h2>
<p>Agrega uno o varios materiales dentro de la compra.</p>
</div>
<button data-variant="outline" type="button">Agregar material</button>
</div>
<div>
<div>
<div>
<p>Material #1</p>
<button data-variant="ghost" type="button">Quitar</button>
</div>
<div>
<div>
<div>
<label for="id_material-_R_1ba_">Material *</label>
<input type="hidden" name="id_material" value=""/>
<div>
<input id="id_material-_R_1ba_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_material-_R_1ba_-listbox" aria-expanded="false" required="" placeholder="Buscar material..." value=""/>
</div>
</div>
</div>
<div>
<label>Unidad *</label>
<input required="" name="unidad_medida" value=""/>
</div>
</div>
<div>
<div>
<label>Cantidad *</label>
<input type="number" step="0.01" min="0.01" required="" name="cantidad" value="1"/>
</div>
<div>
<label>Costo unitario *</label>
<input type="number" step="0.01" min="0" required="" name="costo_unitario" value="0"/>
</div>
<div>
<label>Subtotal</label>
<div>S/ 0.00</div>
</div>
</div>
<div>
<label>Observacion del material</label>
<input name="item_observaciones" value=""/>
</div>
</div>
</div>
<div>
<div>
<span>Subtotal calculado</span>
<span>S/ 0.00</span>
</div>
<div>
<span>IGV (no aplica)</span>
<span>S/ 0.00</span>
</div>
<div>
<span>Total de la compra</span>
<span>S/ 0.00</span>
</div>
</div>
</section>
<div>
<a data-variant="link" href="/dashboard/inventory/purchases">Cancelar</a>
<button data-variant="default" type="submit">Registrar compra y entrada</button>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;
